--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <nav>
@@ -137,7 +141,7 @@
 
     <section class="courses">
       <h2>Our Popular Courses</h2>
-      <div class="conta courses__container">
+      <div class="container courses__container">
         <article class="course">
           <div class="course__image">
             <img src="./images/course1.jpg" alt="" />
@@ -185,6 +189,241 @@
       </div>
     </section>
 
+    <!-------------------------------------------------------------->
+
+    <section class="faqs">
+      <h2>Frequently Asked Questions</h2>
+      <div class="container faqs__container">
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="questions__answer">
+            <h4>Do you know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+              maxime cum, culpa voluptate nesciunt, eveniet consectetur libero
+              praesentium non vitae eos, quisquam incidunt aut? Delectus.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-------------------------------------------------------------->
+
+    <section class="container testimonials__container swiper mySwiper">
+      <h2>Student Testimonials</h2>
+      <div class="swiper-wrapper">
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar1.jpg" alt="" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Diana Ayi</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              dolorem dolor nulla voluptatem aliquid explicabo tenetur illo
+              repellendus, harum natus deserunt nobis ducimus illum totam at.
+              Vitae sit nulla earum?
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar2.jpg" alt="" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Ermest Achiever</h5>
+            <small>Web Developer</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              dolorem dolor nulla voluptatem aliquid explicabo tenetur illo
+              repellendus, harum natus deserunt nobis ducimus illum totam at.
+              Vitae sit nulla earum?
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar3.jpg" alt="" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Edem Quist</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              dolorem dolor nulla voluptatem aliquid explicabo tenetur illo
+              repellendus, harum natus deserunt nobis ducimus illum totam at.
+              Vitae sit nulla earum?
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar4.jpg" alt="" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Hajia Bintu</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              dolorem dolor nulla voluptatem aliquid explicabo tenetur illo
+              repellendus, harum natus deserunt nobis ducimus illum totam at.
+              Vitae sit nulla earum?
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar5.jpg" alt="" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Diana Ayi</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              dolorem dolor nulla voluptatem aliquid explicabo tenetur illo
+              repellendus, harum natus deserunt nobis ducimus illum totam at.
+              Vitae sit nulla earum?
+            </p>
+          </div>
+        </article>
+      </div>
+      <div class="swiper-pagination"></div>
+    </section>
+
+    <!-------------------------------------------------------------->
+
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__1">
+          <a href="index.html" class="footer__logo"><h4>EGATOR</h4></a>
+        </div>
+      </div>
+    </footer>
+
+
+
+
+
+
+
+
     <script src="./main.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+      slidesPerColumn: 2,
+      spaceBetween: 30,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+        breakpoints: {
+          700: {
+            slidesPerView: 2,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
