--- a/index.html
+++ b/index.html
@@ -396,7 +396,51 @@
       <div class="container footer__container">
         <div class="footer__1">
           <a href="index.html" class="footer__logo"><h4>EGATOR</h4></a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis maiores mollitia ut autem tempora vero?</p>
         </div>
+
+        <div class="footer__2">
+          <h4>Permalinks</h4>
+          <ul class="permalinks">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__3">
+          <h4>Primacy</h4>
+          <ul class="primacy">
+            <li><a href="#">Primacy Policy</a></li>
+            <li><a href="#">Terms and conditions</a></li>
+            <li><a href="#">Refund Policy</a></li>
+          </ul>  
+        </div>
+
+        <div class="footer__4">
+          <h4>Contact Us</h4>
+          <div>
+            <p>+01 0123 234 234</p>
+            <p>buivanduynhat@gmail.com</p>
+          </div>
+          
+          <ul class="footer__socials">
+            <li><a href="#">
+              <i class="uil uil-facebook-f"></i>
+            </a></li>
+            <li><a href="#">
+              <i class="uil uil-instagram-alt"></i>
+            </a></li>
+            <li><a href="#">
+              <i class="uil uil-twitter"></i>
+            </a></li>
+            <li><a href="#">
+              <i class="uil uil-linkedin-alt"></i>
+            </a></li>
+          </ul>  
+        </div>
+        
       </div>
     </footer>
 
@@ -411,7 +455,7 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
       var swiper = new Swiper(".mySwiper", {
-        slidesPerView: 1,
+      slidesPerView: 1,
       slidesPerColumn: 2,
       spaceBetween: 30,
       pagination: {
