--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
         <div class="categories__left">
           <h1>Categories</h1>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore
-            deleniti soluta nesciunt praesentium autem repudiandae quibusdam
-            esse at tempore a deserunt ducimus error vitae quae ex vero quam,
-            voluptas illo?
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, adipisci ipsam. Distinctio sit iusto quisquam veniam qui et cupiditate vero, eum molestiae sed? Odit porro enim distinctio laborum cumque, quo sit doloribus. Ex aperiam cumque dolorem numquam quis asperiores, perferendis corporis voluptatibus sed maiores odit eaque assumenda in officia omnis!
           </p>
           <a href="#" class="btn">Learn More</a>
         </div>
